[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retina-simulation"
version = "0.1.0"
description = "Fleet simulator and synthetic node generator for RETINA passive radar"
requires-python = ">=3.10"
dependencies = [
    "retina-custody>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["retina_simulation*"]

[tool.setuptools.package-data]
retina_simulation = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
